[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Entities/asteroid.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Entities/Asteroid.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 7 )

[node name="Asteroid" type="RigidBody2D" groups=[
"asteroid",
]]
mass = 50.0
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"asteroid",
]]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." groups=[
"asteroid",
]]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 2.08616e-07, -6.25849e-07 )
texture = ExtResource( 1 )

[node name="HitDetection" type="Area2D" parent="." groups=[
"asteroid",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetection" groups=[
"asteroid",
]]
visible = false
shape = SubResource( 2 )

[node name="HitTimer" type="Timer" parent="." groups=[
"asteroid",
]]
[connection signal="body_entered" from="HitDetection" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
